Add smtp settings

--- a/EuromillionsCore/appsettings.json
+++ b/EuromillionsCore/appsettings.json
@@ -13,7 +13,7 @@
     "ApiUrlAll": "https://nunofcguerreiro.com/api-euromillions-json?result=all",
     "ApiUrlLast": "https://nunofcguerreiro.com/api-euromillions-json"
   },
-  "StmpClientConfiguration": {
+  "SmtpConfiguration": {
     "Host": "value",
     "Port": "value",
     "Username": "value",
