--- a/EuromillionsCore/appsettings.json
+++ b/EuromillionsCore/appsettings.json
@@ -7,7 +7,8 @@
 {
   "FolderPath": "Data",
   "FilePath": "Data\\draws.json",
-  "FirstDraw": "09/27/2016",
+  "UseTwelveStarsRule": false,
+  "TwelveStarsRuleFirstDraw": "09/27/2016",
   "NumberOfKeys": 1,
   "NunofcAPIConfiguration": {
     "ApiUrlAll": "https://nunofcguerreiro.com/api-euromillions-json?result=all",
