Refactor settings for last rules change

--- a/EuromillionsCore/appsettings.json
+++ b/EuromillionsCore/appsettings.json
@@ -7,8 +7,8 @@
 {
   "FolderPath": "Data",
   "FilePath": "Data\\draws.json",
-  "UseTwelveStarsRule": false,
-  "TwelveStarsRuleFirstDraw": "09/27/2016",
+  "UseAllDraws": true,
+  "NewRulesFirstDrawDate": "09/27/2016",
   "NumberOfKeys": 1,
   "NunofcAPIConfiguration": {
     "ApiUrlAll": "https://nunofcguerreiro.com/api-euromillions-json?result=all",
