Refactor first draw settings and usage

--- a/EuromillionsCore/appsettings.json
+++ b/EuromillionsCore/appsettings.json
@@ -7,8 +7,7 @@
 {
   "FolderPath": "Data",
   "FilePath": "Data\\draws.json",
-  "UseAllDraws": true,
-  "NewRulesFirstDrawDate": "09/27/2016",
+  "FirstDrawDate": "09/27/2016",
   "NumberOfKeys": 1,
   "NunofcAPIConfiguration": {
     "ApiUrlAll": "https://nunofcguerreiro.com/api-euromillions-json?result=all",
