Add draw Type entity

--- a/EuromillionsCore/appsettings.json
+++ b/EuromillionsCore/appsettings.json
@@ -6,7 +6,8 @@
 */
 {
   "FolderPath": "Data",
-  "FilePath": "Data\\draws.json",
+  "FilePathDrawn": "Data\\past_draws.json",
+  "FilePathGenerated": "Data\\generated_draws.json",
   "FirstDrawDate": "09/27/2016",
   "NumberOfKeys": 1,
   "NunofcAPIConfiguration": {
