Update proj structure

--- a/tests/Euromillions.Tests/Euromillions.Tests.csproj
+++ b/tests/Euromillions.Tests/Euromillions.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EuromillionsCore\EuromillionsCore.csproj" />
+    <ProjectReference Include="..\..\src\Euromillions\Euromillions.csproj" />
   </ItemGroup>
 
 </Project>
