--- a/src/Euromillions/Properties/launchSettings.json
+++ b/src/Euromillions/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "EuromillionsCore": {
+    "Euromillions": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
